--- a/RobotHallway/check_bayes_filter.ipynb
+++ b/RobotHallway/check_bayes_filter.ipynb
@@ -149,7 +149,7 @@
      "text": [
       "Checking move_left function\n",
       "Checking move_right function\n",
-      "On left wall 37, on right wall 17, of 80 moves\n",
+      "On left wall 31, on right wall 30, of 80 moves\n",
       "Checking move left probabilities\n",
       "Checking move right probabilities\n",
       "Passed discrete tests\n"
@@ -182,7 +182,7 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>robotGT</pre></strong> passed! 🙌</p>"
+       "<p><strong><pre style='display: inline;'>robotGT</pre></strong> passed! 🚀</p>"
       ],
       "text/plain": [
        "robotGT results: All test cases passed!"
@@ -318,7 +318,7 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>robot_sensors</pre></strong> passed! 🙌</p>"
+       "<p><strong><pre style='display: inline;'>robot_sensors</pre></strong> passed! 💯</p>"
       ],
       "text/plain": [
        "robot_sensors results: All test cases passed!"
@@ -426,29 +426,24 @@
       "Testing move update\n",
       "Loc 0.45, Doors [0.275, 0.5750000000000001, 0.7250000000000001], Sensor False\n",
       "Loc 0.4, Doors [0.275, 0.5750000000000001, 0.7250000000000001], Sensor False\n",
-      "Loc 0.4, Doors [0.275, 0.5750000000000001, 0.7250000000000001], Sensor False\n",
-      "Loc 0.5, Doors [0.275, 0.5750000000000001, 0.7250000000000001], Sensor False\n",
-      "Warning: Sensor reading is different than check False versus True\n",
-      "Loc 0.5, Doors [0.275, 0.5750000000000001, 0.7250000000000001], Sensor False\n",
-      "Warning: Sensor reading is different than check False versus True\n",
-      "Loc 0.55, Doors [0.275, 0.5750000000000001, 0.7250000000000001], Sensor True\n",
-      "Warning: Sensor reading is different than check True versus False\n",
       "Loc 0.45, Doors [0.275, 0.5750000000000001, 0.7250000000000001], Sensor False\n",
-      "Loc 0.4, Doors [0.275, 0.5750000000000001, 0.7250000000000001], Sensor False\n",
-      "Loc 0.45, Doors [0.275, 0.5750000000000001, 0.7250000000000001], Sensor False\n",
-      "Loc 0.4, Doors [0.275, 0.5750000000000001, 0.7250000000000001], Sensor False\n",
-      "Loc 0.5, Doors [0.275, 0.5750000000000001, 0.7250000000000001], Sensor False\n",
       "Loc 0.55, Doors [0.275, 0.5750000000000001, 0.7250000000000001], Sensor True\n",
       "Loc 0.6000000000000001, Doors [0.275, 0.5750000000000001, 0.7250000000000001], Sensor True\n",
-      "Warning: Sensor reading is different than check True versus False\n",
-      "Loc 0.55, Doors [0.275, 0.5750000000000001, 0.7250000000000001], Sensor True\n",
-      "Warning: Sensor reading is different than check True versus False\n",
+      "Loc 0.6500000000000001, Doors [0.275, 0.5750000000000001, 0.7250000000000001], Sensor False\n",
+      "Loc 0.45, Doors [0.275, 0.5750000000000001, 0.7250000000000001], Sensor False\n",
+      "Loc 0.4, Doors [0.275, 0.5750000000000001, 0.7250000000000001], Sensor False\n",
+      "Loc 0.45, Doors [0.275, 0.5750000000000001, 0.7250000000000001], Sensor False\n",
+      "Loc 0.4, Doors [0.275, 0.5750000000000001, 0.7250000000000001], Sensor False\n",
+      "Loc 0.45, Doors [0.275, 0.5750000000000001, 0.7250000000000001], Sensor False\n",
+      "Loc 0.4, Doors [0.275, 0.5750000000000001, 0.7250000000000001], Sensor True\n",
+      "Loc 0.4, Doors [0.275, 0.5750000000000001, 0.7250000000000001], Sensor False\n",
       "Loc 0.5, Doors [0.275, 0.5750000000000001, 0.7250000000000001], Sensor False\n",
+      "Loc 0.45, Doors [0.275, 0.5750000000000001, 0.7250000000000001], Sensor False\n",
       "Loc 0.5, Doors [0.275, 0.5750000000000001, 0.7250000000000001], Sensor False\n",
-      "Loc 0.5, Doors [0.275, 0.5750000000000001, 0.7250000000000001], Sensor False\n",
-      "Loc 0.5, Doors [0.275, 0.5750000000000001, 0.7250000000000001], Sensor False\n",
-      "Loc 0.55, Doors [0.275, 0.5750000000000001, 0.7250000000000001], Sensor True\n",
-      "Loc 0.5, Doors [0.275, 0.5750000000000001, 0.7250000000000001], Sensor False\n",
+      "Loc 0.45, Doors [0.275, 0.5750000000000001, 0.7250000000000001], Sensor False\n",
+      "Loc 0.4, Doors [0.275, 0.5750000000000001, 0.7250000000000001], Sensor False\n",
+      "Loc 0.45, Doors [0.275, 0.5750000000000001, 0.7250000000000001], Sensor True\n",
+      "Loc 0.4, Doors [0.275, 0.5750000000000001, 0.7250000000000001], Sensor False\n",
       "Passed\n"
      ]
     },
@@ -488,47 +483,10 @@
     {
      "data": {
       "text/html": [
-       "<p><strong style='color: red;'><pre style='display: inline;'>bayes_filter</pre> results:</strong></p><p><strong><pre style='display: inline;'>bayes_filter - 1</pre> result:</strong></p><pre>    ✅ Test case passed</pre><p><strong><pre style='display: inline;'>bayes_filter - 2</pre> result:</strong></p><pre>    ✅ Test case passed</pre><p><strong><pre style='display: inline;'>bayes_filter - 3</pre> result:</strong></p><pre>    ❌ Test case failed\n",
-       "    Trying:\n",
-       "        assert test_bayes_move_update(b_print=False)\n",
-       "    Expecting nothing\n",
-       "    **********************************************************************\n",
-       "    Line 1, in bayes_filter 2\n",
-       "    Failed example:\n",
-       "        assert test_bayes_move_update(b_print=False)\n",
-       "    Expected nothing\n",
-       "    Got:\n",
-       "        Warning: Sensor reading is different than check False versus True\n",
-       "        Warning: Sensor reading is different than check False versus True\n",
-       "        Warning: Sensor reading is different than check True versus False\n",
-       "        Warning: Sensor reading is different than check True versus False\n",
-       "        Warning: Sensor reading is different than check True versus False\n",
-       "</pre>"
+       "<p><strong><pre style='display: inline;'>bayes_filter</pre></strong> passed! 🌟</p>"
       ],
       "text/plain": [
-       "bayes_filter results:\n",
-       "    bayes_filter - 1 result:\n",
-       "        ✅ Test case passed\n",
-       "\n",
-       "    bayes_filter - 2 result:\n",
-       "        ✅ Test case passed\n",
-       "\n",
-       "    bayes_filter - 3 result:\n",
-       "        ❌ Test case failed\n",
-       "        Trying:\n",
-       "            assert test_bayes_move_update(b_print=False)\n",
-       "        Expecting nothing\n",
-       "        **********************************************************************\n",
-       "        Line 1, in bayes_filter 2\n",
-       "        Failed example:\n",
-       "            assert test_bayes_move_update(b_print=False)\n",
-       "        Expected nothing\n",
-       "        Got:\n",
-       "            Warning: Sensor reading is different than check False versus True\n",
-       "            Warning: Sensor reading is different than check False versus True\n",
-       "            Warning: Sensor reading is different than check True versus False\n",
-       "            Warning: Sensor reading is different than check True versus False\n",
-       "            Warning: Sensor reading is different than check True versus False"
+       "bayes_filter results: All test cases passed!"
       ]
      },
      "execution_count": 16,
