--- a/RobotHallway/check_bayes_filter.ipynb
+++ b/RobotHallway/check_bayes_filter.ipynb
@@ -182,7 +182,7 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>robotGT</pre></strong> passed! 🌈</p>"
+       "<p><strong><pre style='display: inline;'>robotGT</pre></strong> passed! ✨</p>"
       ],
       "text/plain": [
        "robotGT results: All test cases passed!"
@@ -318,7 +318,7 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>robot_sensors</pre></strong> passed! 🚀</p>"
+       "<p><strong><pre style='display: inline;'>robot_sensors</pre></strong> passed! 🌈</p>"
       ],
       "text/plain": [
        "robot_sensors results: All test cases passed!"
@@ -483,7 +483,7 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>bayes_filter</pre></strong> passed! 🍀</p>"
+       "<p><strong><pre style='display: inline;'>bayes_filter</pre></strong> passed! 💯</p>"
       ],
       "text/plain": [
        "bayes_filter results: All test cases passed!"
@@ -552,7 +552,7 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>hours_collaborators</pre></strong> passed! 🌈</p>"
+       "<p><strong><pre style='display: inline;'>hours_collaborators</pre></strong> passed! 🚀</p>"
       ],
       "text/plain": [
        "hours_collaborators results: All test cases passed!"
